final: 게임을 제외한 백엔드 코드 구현